--- a/public/css/style.css
+++ b/public/css/style.css
@@ -928,3 +928,17 @@ padding: 10px 0px;
 
 
  /* contact */
+
+
+/* servicedesign */
+
+.servicedesign img{
+width: 100%;
+height: auto;
+}
+
+
+
+
+
+/* servicedesign */
